--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -114,3 +114,7 @@ section {
     }
 }
 
+.fixed {
+    position: fixed;
+    width: 100%;
+}
