--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -84,6 +84,7 @@ header {
         margin: 0;
         padding: 15px 0;
         list-style: none;
+        height: 1200px;
 
         @media screen and (min-width: 768px) {
             display: flex;
